Fix visual glitch when collapsing group
Fix #73

--- a/fractal-gtk/res/app.css
+++ b/fractal-gtk/res/app.css
@@ -75,3 +75,7 @@
 .room-list list row:selected .direct-chat {
     color: alpha(@theme_selected_fg_color, 0.5);
 }
+
+.collapsed row:selected {
+    background-color: transparent;
+}
